# ripley-scraper

./: .env.example  .gitignore  .~lock.ripley_data.csv#  Dockerfile  README.md  brave_login.html  brave_post_login.html  docker-compose.yml  frame_after_evaluate.html  main.py  pyproject.toml  ripley_data.csv  ventas_sin_stock.html
src/: config.py
src/app/: router.py
src/app/router/: router_ripley.py
src/artifacts/exports/: ripley_data.csv
src/artifacts/html/: brave_search_result.html  menu_frame_content.html
src/models/: ripley.py  ripley_response.py
src/scraper/: ripley.py
src/scraper/ripley/: checkpass.py  ripley.py  scraper.py
src/utils/: browser_manager.py
src/validators/: date_format.py
