[tool.poetry]
name = "ripley-scraper"
version = "0.1.0"
description = ""
authors = ["juanj72TC <juan.jara@teamcore.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.54.0"
playwright-stealth = "^2.0.0"
requests = "^2.32.4"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
