[tool.poetry]
name = "ripley-scraper"
version = "0.1.0"
description = ""
authors = ["juanj72TC <juan.jara@teamcore.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.54.0"
playwright-stealth = "^2.0.0"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
